# mj_ws

./: LICENSE  README.md
logs/20251226_171745/: monitor.csv
logs/20251226_171745/tb/PPO_1/: events.out.tfevents.1766737066.user-System-Product-Name.601290.0
logs/20260102_005111/: monitor.csv
logs/20260102_005111/checkpoints/: vecnormalize.pkl
logs/20260102_005111/tb/PPO_1/: events.out.tfevents.1767282672.user-System-Product-Name.1030061.0
projects/myhumanoid/: README.md  pyproject.toml
projects/myhumanoid/logs/humanoid_v5/20260102_005111/: monitor.csv
projects/myhumanoid/logs/humanoidstandup_v5/20251226_171745/checkpoints/: vecnormalize.pkl
projects/myhumanoid/logs/humanoidstandup_v5/20260104_231505/: monitor.csv
projects/myhumanoid/logs/humanoidstandup_v5/20260104_231505/checkpoints/: vecnormalize.pkl
projects/myhumanoid/logs/humanoidstandup_v5/20260104_231505/tb/PPO_1/: events.out.tfevents.1767536109.IN-SEONGui-MacBookAir.local.13644.0
projects/myhumanoid/scripts/: play.py  train.py
projects/myhumanoid/source/envs/: __init__.py  myhumanoid.py
projects/myhumanoid/source/myhumanoid.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
source/: play.py  play_following.py  play_standup.py  train.py  train_video_standup.py
templates/mujoco_sb3_base/: README.md  pyproject.toml
templates/mujoco_sb3_base/scripts/: play.py  train.py
templates/mujoco_sb3_base/source/envs/: __init__.py  env_template.py
tools/: inspect_env_source.py  new_project.sh  test_env.py  test_mujoco.py
utils/: test_mujoco.py
